# geckoterminal_collector

./: .env.development  .env.example  .env.nautilus  .env.postgresql  .env.production  .gitignore  AUTO_WATCHLIST_INTEGRATION_SUMMARY.md  BUG_FIXES_SUMMARY.md  CLI_ISSUE_RESOLUTION_SUMMARY.md  CLI_NEW_POOLS_INTEGRATION_SUMMARY.md  CLI_TEST_SUITE_FIX_SUMMARY.md  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  DATABASE_BACKUP_GUIDE.md  DATABASE_CONCURRENCY_ANALYSIS.md  DATABASE_RESILIENCE_IMPLEMENTATION_SUMMARY.md  DATATYPE_FIXES_SUMMARY.md  Dockerfile  ENHANCED_NEW_POOLS_IMPLEMENTATION_SUMMARY.md  FINAL_QLIB_INTEGRATION_STATUS.md  MIGRATION_GUIDE.md  NEW_POOLS_HISTORY_IMPLEMENTATION_PLAN.md  POSTGRESQL_MIGRATION_PLAN.md  PUMPSWAP_INTEGRATION_IMPLEMENTATION_SUMMARY.md  README.md  SEPTEMBER_15_2025_COMPREHENSIVE_DEVELOPMENT_PACKAGE.md  SYSTEM_ARCHITECTURE_DIAGRAM.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TASK_3.2_SUMMARY.md  TASK_4.2_IMPLEMENTATION_SUMMARY.md  TASK_5.1_IMPLEMENTATION_SUMMARY.md  TASK_6_ENHANCED_SIGNAL_PROCESSING_SUMMARY.md  TASK_9_COMPREHENSIVE_ERROR_HANDLING_SUMMARY.md  TASK_9_ENHANCED_COLLECTORS_SUMMARY.md  UNICODE_ENCODING_FIX.md  WATCHLIST_CLI_ENHANCEMENT_SUMMARY.md  WATCHLIST_TEST_FIXES_SUMMARY.md  alembic.ini  apply_database_optimizations.py  bulk_demo_1757547158.db  check_blank_pools.py  (+113 more)
.rate_limiter_state/: ohlcv_rate_limiter.json  (+6 more)
specs/v5/PumpSwap_SDK-main/: LICENSE  README.md  pyproject.toml
specs/v5/PumpSwap_SDK-main/.github/workflows/: release.yml
specs/v5/PumpSwap_SDK-main/pumpswap_sdk/: __init__.py
specs/v5/PumpSwap_SDK-main/tests/: test_sdk.py
(+516 files in other folders)
